--- a/src/Sample-Configuration.json
+++ b/src/Sample-Configuration.json
@@ -9,7 +9,7 @@
       "TeamsMessageTemplate": {
         "@type": "MessageCard",
         "@context": "https://schema.org/extensions",
-        "summary": "Alert fired for rule [[alert.data.essentials.alertRule]]",
+        "summary": "Alert fired for rule [[$.data.essentials.alertRule]]",
         "themeColor": "0078D7",
         "title": "[[searchResult.problemId]]",
         "sections": [
@@ -34,7 +34,7 @@
             "targets": [
               {
                 "os": "default",
-                "uri": "[[alert.alertContext.LinkToSearchResults]]"
+                "uri": "[[$.data.alertContext.LinkToSearchResults]]"
               }
             ]
           }
@@ -51,7 +51,7 @@
       "TeamsMessageTemplate": {
         "@type": "MessageCard",
         "@context": "https://schema.org/extensions",
-        "summary": "Alert fired for rule [[alert.data.essentials.alertRule]]",
+        "summary": "Alert fired for rule [[$.data.essentials.alertRule]]",
         "themeColor": "0078D7",
         "title": "[[searchResult.problemId]]",
         "sections": [
@@ -76,7 +76,7 @@
             "targets": [
               {
                 "os": "default",
-                "uri": "[[alert.alertContext.LinkToSearchResults]]"
+                "uri": "[[$.data.alertContext.LinkToSearchResults]]"
               }
             ]
           }
