--- a/src/AzureMonitorAlertToTeams.Tests/AzureMonitorAlertToTeams.Tests.csproj
+++ b/src/AzureMonitorAlertToTeams.Tests/AzureMonitorAlertToTeams.Tests.csproj
@@ -20,6 +20,9 @@
     <Content Include="assets\ApplicationInsights\configuration.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="assets\ApplicationInsights\configuration_with_section_template.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="assets\LogAlertsV2\configuration.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -29,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.20" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
